--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8"/>
   <meta name = "viewport" content = "width=device-width">
   <link rel = "stylesheet" type = "text/css" href = "./styles/main.css"/>
-  <link rel = "stylesheet" type = "text/css" href = "./styles/reset.css"/>
+  <link rel = "stylesheet" type = "text/css" href = "./styles/normalize.css"/>
 </head>
 <body>
   
