Add link to source file

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
 
     <footer>
-      <a href = ''><img id = 'github' src = 'favicons/GitHub-Mark-Light-64px.png' width = '35' height="35"/></a>
+      <a href = 'https://github.com/Pandenok/calculator'><img id = 'github' src = 'favicons/GitHub-Mark-Light-64px.png' width = '35' height="35"/></a>
       designed by pandenok &copy
     </footer>
     
